--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ nav a {
     color: black;
 }
 
-@media screen and (max-whith: 600px ){main{ display: grid;
+@media screen and (max-width: 600px ){main{ display: grid;
     grid-template-columns: 1fr ;
     grid-template-areas: 
     "h  "
